@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jolokia</groupId>
   <artifactId>jolokia</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.6.3-SNAPSHOT</version>
   <name>jolokia-parent</name>
   <description>jolokia parent pom</description>
 
@@ -165,12 +165,12 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+          <version>3.8.1</version>
         </plugin>
 
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.1</version>
+          <version>3.3.0</version>
         </plugin>
 
         <plugin>
@@ -215,7 +215,13 @@
 
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.3.1</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.2.4</version>
         </plugin>
 
         <plugin>
@@ -225,7 +231,12 @@
 
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>2.22.2</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.2</version>
         </plugin>
 
         <plugin>
@@ -574,14 +585,7 @@
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
-        <version>3.0</version>
-        <scope>test</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jmockit</groupId>
-        <artifactId>jmockit</artifactId>
-        <version>1.8</version>
+        <version>4.3</version>
         <scope>test</scope>
       </dependency>
 
@@ -596,8 +600,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <currentStableVersion>1.6.0</currentStableVersion>
-    <currentSnapshotVersion>1.6.1-SNAPSHOT</currentSnapshotVersion>
+    <currentStableVersion>1.6.2</currentStableVersion>
+    <currentSnapshotVersion>1.6.3-SNAPSHOT</currentSnapshotVersion>
     <github.global.server>github</github.global.server>
   </properties>
 
@@ -688,6 +692,7 @@
             <artifactId>site-maven-plugin</artifactId>
             <configuration>
               <message>Creating site for Jolokia ${project.version}</message>
+              <server>jolokia-site</server>
             </configuration>
             <executions>
               <execution>
@@ -744,6 +749,34 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                 <excludedGroups>java6</excludedGroups>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>java9+</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  <!--
+                    deny all reflective access except:
+                     - java.base/java.lang for Easymock (see https://github.com/easymock/easymock/issues/235)
+                     - java.management/javax.management.modelmbean for org.jolokia.jmx.JolokiaMBeanServerTest
+                  -->
+                  --illegal-access=deny
+                  --add-opens java.base/java.lang=ALL-UNNAMED
+                  --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
+                </argLine>
               </configuration>
             </plugin>
           </plugins>
